Fix footer whitespace

--- a/static/css/invoice.scss
+++ b/static/css/invoice.scss
@@ -160,7 +160,7 @@ dl.company-info dd{
 }
 
 dl.company-info dt:after {
-  content: ':	';
+  content: ':\a0';
 }
 
 dl.company-info dd:after {
